--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -17,7 +17,53 @@
 //----------------------------------------------------------------------------------------------
 // VARIABLES
 //----------------------------------------------------------------------------------------------
+$green: #2ecc71;
+$red: #e74c3c;
+$blue: #3498db;
+$yellow: #f1c40f;
+$purple: #8e44ad;
+$turquoise: #1abc9c;
 
 //----------------------------------------------------------------------------------------------
 // CORE
 //----------------------------------------------------------------------------------------------
+
+.button {
+    box-sizing: border-box;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid $red;
+    border-radius: 0.6em;
+    color: $red;
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  
+    &:hover,
+    &:focus {
+      color: #fff;
+      outline: 0;
+    }
+
+    &.button--primary {
+        border-color: $turquoise;
+        color: #fff;
+        box-shadow: 0 0 40px 40px $turquoise inset, 0 0 0 0 $turquoise;
+        transition: all 150ms ease-in-out;
+        
+        &:hover {
+          box-shadow: 0 0 10px 0 $turquoise inset, 0 0 10px 4px $turquoise;
+          color:$turquoise;
+        }
+    }
+}
