added disabled loading rules

--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -135,6 +135,19 @@
 }
 
 //----------------------------------------------------------------------------------------------
+// Animation
+//----------------------------------------------------------------------------------------------
+@keyframes button-loading-spinner {
+  from {
+      transform: rotate(0turn);
+  }
+
+  to {
+      transform: rotate(1turn);
+  }
+}
+
+//----------------------------------------------------------------------------------------------
 // FlEXBOX HELPER CLASSESS
 //----------------------------------------------------------------------------------------------
 .align-items-center {
