--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -32,13 +32,13 @@ $turquoise: #1abc9c;
   // Rules affecting all buttons
   display: flex;
   align-items: center;
-  border-radius: 0.6em;
+  border-radius: rem(10);
   cursor: pointer;
-  padding: 1.2em 2.8em;
+  padding: rem(20) rem(20);
 
   &.button--primary {
     // Rules specific to button primary
-    border: 2px solid $turquoise;
+    border: rem(2) solid $turquoise;
     background-color: $turquoise;
     color: #fff;
 
@@ -65,13 +65,13 @@ $turquoise: #1abc9c;
 
       &::after {
         content: "";
-        width: 20px;
-        height: 20px;
-        border: 4px solid transparent;
+        width: rem(20);
+        height: rem(20);
+        border: rem(4) solid transparent;
         border-top-color: #ffffff;
         border-radius: 50%;
         animation: button-loading-spinner 1s ease infinite;
-        margin-left: 10px;
+        margin-left: rem(10);
       }
     }
     // Primary Disabled and Loading Rules
