--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -17,13 +17,9 @@
 //----------------------------------------------------------------------------------------------
 // VARIABLES
 //----------------------------------------------------------------------------------------------
-$green: #2ecc71;
-$red: #e74c3c;
-$blue: #3498db;
-$yellow: #f1c40f;
-$purple: #8e44ad;
 $turquoise: #1abc9c;
-
+$grey: #cdd5e0;
+$lightest: #ffffff;
 //----------------------------------------------------------------------------------------------
 // CORE
 //----------------------------------------------------------------------------------------------
@@ -40,16 +36,16 @@ $turquoise: #1abc9c;
     // Rules specific to button primary
     border: rem(2) solid $turquoise;
     background-color: $turquoise;
-    color: #fff;
+    color: $lightest;
 
     &:hover {
-      background-color: white;
+      background-color: $lightest;
       color: $turquoise;
     }
     // Primary Disabled Rules
     &.button--disabled {
-      background-color: #cdd5e0;
-      border-color: #cdd5e0;
+      background-color: $grey;
+      border-color: $grey;
       cursor: not-allowed;
 
       &:hover {
@@ -60,7 +56,7 @@ $turquoise: #1abc9c;
     &.button--loading {
       &:hover {
         background-color: $turquoise;
-        color: white;
+        color: $lightest;
       }
 
       &::after {
@@ -68,7 +64,7 @@ $turquoise: #1abc9c;
         width: rem(20);
         height: rem(20);
         border: rem(4) solid transparent;
-        border-top-color: #ffffff;
+        border-top-color: $lightest;
         border-radius: 50%;
         animation: button-loading-spinner 1s ease infinite;
         margin-left: rem(10);
@@ -77,8 +73,8 @@ $turquoise: #1abc9c;
     // Primary Disabled and Loading Rules
     &.button--loading.button--disabled {
       &:hover {
-        border-color: #cdd5e0;
-        background-color: #cdd5e0;
+        border-color: $grey;
+        background-color: $grey;
       }
     }
   }
