--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -7,15 +7,6 @@
 //==============================================================================================
 
 //Colors
-$primary: #001524;
-$secondary: #ff9100;
-$third: #e36414;
-$fourth: #d2e4ff;
-$fifth: #005ef0;
-$sixth: #1973ff;
-$seventh: #ffae6a;
-$eighth: #f27d1c;
 $lightest: #ffffff;
-$lighter: #efefef;
-$darker: #242424;
-$darkest: #000000;
+$primary: #cdd5e0;
+$secondary: #1abc9c;
