moved colors to variables

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -9,7 +9,6 @@
 //----------------------------------------------------------------------------------------------
 // IMPORTS
 //----------------------------------------------------------------------------------------------
-@import '../utils/functions.scss';
 
 //----------------------------------------------------------------------------------------------
 // VARIABLES
@@ -19,3 +18,9 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 $screen-lg-min: 992px;
 $screen-xl-min: 1200px;
+
+//Colors
+$lightest: #ffffff;
+$primary: #cdd5e0;
+$secondary: #1abc9c;
+
