added product card scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 // IMPORT 3.LAYOUT
 //----------------------------------------------------------------------------------------------
 @import './layout/header.scss';
+@import './layout/product-card.scss';
 
 //----------------------------------------------------------------------------------------------
 // IMPORT 4.PAGES
